Fix hand overflow

--- a/src/components/Hand/Hand.module.scss
+++ b/src/components/Hand/Hand.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
-  width: 90%;
-  padding: 100px 5% 0 5%;
+  margin: 0 auto;
+  width: 86%;
+  padding: 80px 7% 0 7%;
   overflow: hidden;
 
   .container {
